--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
   "name": "drox",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "scripts": {
+    "build": "tsc",
+    "build:watch": "tsc -w"
+  },
+  "dependencies": {
+    "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^2.0.0"
+  }
 }
