--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "drox",
   "version": "0.1.0",
   "scripts": {
+    "start": "npm run build:watch & http-server",
     "build": "tsc",
     "build:watch": "tsc -w"
   },
   "dependencies": {
-    "typescript": "^5.1.6"
-  },
-  "devDependencies": {
+    "http-server": "^14.1.1",
+    "typescript": "^5.1.6",
     "ts-node-dev": "^2.0.0"
   }
 }
